# mini-personal-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  load_env.py  main.py  platformio.ini  pyproject.toml
docs/: cc-usage.md
docs/superpowers/plans/: 2026-05-17-album-art-fullscreen.md  2026-05-17-spotify-now-playing-display.md  2026-05-18-button-control.md  2026-05-18-cc-usage-screen.md  2026-05-18-idle-mode.md  2026-05-20-rtsp-screen.md  2026-05-21-rtsp-dual-core.md  2026-05-26-analog-clock.md  2026-05-26-clock-screen.md  2026-05-27-pinterest-screen.md  2026-05-28-todo-screen.md
docs/superpowers/specs/: 2026-05-17-album-art-fullscreen-design.md  2026-05-17-button-control-design.md  2026-05-17-spotify-now-playing-display-design.md  2026-05-18-cc-usage-screen-design.md  2026-05-18-idle-mode-design.md  2026-05-20-rtsp-screen-design.md  2026-05-21-rtsp-dual-core-design.md  2026-05-26-analog-clock-design.md  2026-05-28-todo-screen-design.md  2026-05-30-lyrics-romaji-design.md  2026-05-30-synced-lyrics-design.md
include/: NotoSans_Medium14.h  claude_logo.h
scripts/: lyrics_debug.py
server/: main.py  pyproject.toml  rtsp_config-example.json  rtsp_config.json.example
server/routes/: album_art.py  cc_usage.py  lyrics.py  ping.py  pinterest.py  rtsp.py  spotify.py  todo.py
server/tests/: test_cc_usage.py  test_rtsp.py
src/: main.cpp
