[project]
name = "personal-dashboard-nodemcu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio[trio]>=4",
]
