[project]
name = "personal-dashboard-nodemcu"
version = "0.1.0"
description = "FastAPI server and ESP32 firmware for a NodeMCU personal dashboard display"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "Pillow>=11",
    "av>=14",
    "smartcrop>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

